<resources>
    <string name="app_name">Library</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="email_used">Error: email is already used</string>
    <string-array name="types">
        <item>Extra Activity</item>
        <item>Book</item>
        <item>Music</item>
        <item>Film</item>
    </string-array>
    <string name="title_activity_user_tabbed">UserTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="genre">
        <item>Genre</item>
        <item>For teens</item>
        <item>First book</item>
        <item>Fairy tales</item>
        <item>Myth</item>
        <item>Mystery</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Adventure</item>
        <item>First age group</item>
        <item>Second age group</item>
        <item>Romantic</item>
        <item>Comics</item>
        <item>Theatre/Aphorism</item>
        <item>Game</item>
        <item>Horror</item>
        <item>Humor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="obj_not_found">Object not found!</string>
    <string name="loan_request_failed">Loan already requested for this object!</string>
    <string name="loan_requested_successfully">Loan requested successfully!</string>
    <string name="loan_not_started">Loan not started!</string>
    <string name="user_data">User data:</string>
    <string name="loan_accepted">Loan accepted!</string>
    <string name="error">Error!</string>
    <string name="loan_accept">Loan accepted!</string>
    <string name="loan_refuse">Loan refused!</string>
    <string name="new_film">Film created!</string>
    <string name="new_music">Music created!</string>
    <string name="new_book">Book created!</string>
    <string name="new_activity">Activity created!</string>
    <string name="dateformat_error">Date format not valid! [dd/MM/yyyy]</string>
    <string name="no_type_selected">You must select a type!</string>
    <string name="title_activity_firebase_login">Sign in</string>
    <string name="insert_title_error">Insert title HERE!</string>
    <string name="object_not_found">Object not found!</string>
    <string name="title_activity_test">Test</string>
    <string name="password">Password</string>
    <string name="detail">Details</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="coming_soon_activities">Coming soon activities</string>
    <string name="no_internet">No internet connection</string>
    <string name="insert_title">Insert title!</string>
    <string name="insert_name">Insert name!</string>
    <string name="insert_surname">Insert surname!</string>
    <string name="insert_author">Insert author!</string>
    <string name="insert_category">Insert category!</string>
    <string name="insert_isbn">Insert ISBN!</string>
    <string name="new_objects">New objects</string>
    <string name="coming_events">Coming soon events</string>
    <string name="type">Type:</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN-13</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="valid_email">Valid Email</string>
    <string name="demand_loan">Demand loan</string>
    <string name="insert_title_here">Insert title here</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="log_out">Log out</string>
    <string name="loan_status">Loan status</string>
    <string name="not_start">Not started</string>
    <string name="insert_loan_id">Insert loan id!</string>
    <string name="insertloan_id">Insert loan id</string>
    <string name="insert_userid">Insert user email</string>
    <string name="end_loan">End loan</string>
    <string name="not_started">Not started</string>
    <string name="already_loaned_object">There\'s already an active loan for this object!</string>
    <string name="insert_imdb">Insert IMDb</string>
    <string name="insert_mbid">Insert MBId</string>
    <string name="album_title">Album title</string>
    <string name="hint_title">Title</string>
    <string name="book_title">Book title</string>
    <string name="album_hint">Album title</string>
    <string name="film_hint">Film title</string>
    <string name="dialog_delete">You want to end/delete this loan?</string>
    <string name="yes">Yes</string>
    <string name="dialog_start_loan">You want to start this loan?</string>
    <string name="loan_already_requested">Loan already requested!</string>
    <string name="request_loan">Request Loan</string>
    <string name="new_loan_req">New Loan Request</string>
    <string name="date_in_past">Invalid date, the activity can not take place in the past!</string>
    <string name="loan_already_requested_another_user">Loan already requested by another user</string>
    <string name="save">Save</string>
    <string name="cdd">CDD</string>
    <string name="n_ingresso">Entry number</string>
    <string name="insert_cdd">Insert CDD</string>
    <string name="insert_edition">Insert edition</string>
    <string name="insert_entry_n">Insert entry number</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_author">Search by author</string>
    <string name="search_by_genre">Search by genre</string>
    <string name="insert_author_here">Insert author here!</string>
    <string name="insert_entry_number">Insert entry number!</string>
    <string name="search_by_entry_number">Search by entry number</string>
    <string name="insert_title_author">Insert title/author here!</string>
    <string name="insert_entry_here">Insert entry number here!</string>
    <string name="edit">Edit</string>
    <string name="year">Year</string>
    <string name="editore">Publisher</string>
    <string name="edit_book">Edit Book</string>
    <string name="only_book">Only book can be edited!</string>
    <string name="edit_title">Title edited!</string>
    <string name="edit_author">Author edited!</string>
    <string name="edit_publisher">Publisher edited!</string>
    <string name="edit_cdd">CDD edited!</string>
    <string name="edit_entry">Entry number edited!</string>
    <string name="edit_year">Year edited!</string>
    <string name="select_genre">Select the genre!</string>
    <string name="nothing_save">Nothing to save, retry later!</string>
    <string name="wait_save">Wait! I\'m downloading objects from database&#8230;</string>
    <string name="success_save">Saved successfully!</string>
    <string name="case_sensitive">Search function is CaSe SeNsItIvE</string>
    <string name="only_numbers">You have to search only the numbers, like 0001</string>
    <string name="entry_format">Entry number must be in this format: IIM XXXX , where XXXX is the number!</string>
    <string name="new_loan">New Loan</string>

    <string name="cla_ss">Class</string>
    <string name="fill_field">Fill every field!</string>

</resources>
