<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/settings"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_help"
        app:showAsAction="never"
        android:title="@string/help"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_endLoan"
        app:showAsAction="never"
        android:title="@string/end_loan"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_circle_outline"
        android:title="@string/add"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_logout"
        app:showAsAction="never"
        android:title="@string/log_out"
        android:orderInCategory="100"/>

</menu>