<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request_loan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.user.RequestLoan">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>
    <ProgressBar
        android:id="@+id/loan_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/surname" />

        <EditText
            android:id="@+id/et_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/cla_ss" />
    </LinearLayout>

    <Button
        android:text="@string/demand_loan"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_loan"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:text="@string/loan_requested_successfully"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_success"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_green"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"/>
    <TextView
        android:text="@string/loan_request_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_failure"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_red"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"/>


</LinearLayout>
