<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activity.user.ObjectDetail">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
             />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:text="@string/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                android:text="@string/isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_isbn"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:text="@string/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_category"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>
